# RoboticsStudio1

./: CMakeLists.txt  README.md  WorkingGas.py  doxygen testing  gas2.0.py  gasdetector  package.xml  testFile.txt
FinalProject/: HQ.py
FinalProject/config/: mapper_params_online_async.yaml  my_ma_mapper_params.yaml  nav2_params.yaml
FinalProject/launch/: FinalProject.launch.py  k10.launch.py  k10v2.launch.py
FinalProject/map/: disaster_map.yaml
FinalProject/rviz/: test_config.rviz
FinalProject/src/: AudioDetection.cpp  AudioDetection.py  AudioDetectionV2.py  AudioPublisher.py  HQ.h  HQ.py  PathFinding.cpp  PathFinding.h  WorkingGas.py  personDetection.py
FinalProject/world/: disaster.world
Lab1/: ImageModifierNode .c++  Lab1.c++
Sprint3Tamsyn/: image_overlay.py  my_map 1.pgm:Zone.Identifier  my_map 1.yaml:Zone.Identifier  my_map1.pgm  my_map1.yaml  sprint3.py
Sprint3Tamsyn/maps/: map_v2.pgm  map_v2.yaml  map_v3.bt  map_v3.pcd  map_v3.yaml  map_v4.bt  map_v4.pgm  map_v4.yaml
k10/: package.xml  setup.cfg  setup.py
k10/config/: mapper_params_online_async.yaml  my_ma_mapper_params.yaml  nav2_params.yaml
k10/k10/: AudioDetectionV2.py  WorkingGas.py  inference.py
k10/launch/: k10.launch.py
k10/map/: map.pgm  map.yaml  my_ma.yaml
k10/rviz/: config.rviz
k10/world/: disaster.world
week7/: whattodo.txt
